--- a/.newsletter.example
+++ b/.newsletter.example
@@ -1,3 +1,3 @@
 # export MAIL_SERVICE=sendgrid
-# export BASE_DIR=~/newsletter
+# export DATA_DIR=~/newsletter
 # export CONTENT_DIR=~/newsletter/content
